--- a/index.html
+++ b/index.html
@@ -1,10 +1,488 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-    <title>我的第一个 GitHub Pages 网站</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>director_Carter的主页</title>
+	<!-- Material Icons -->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<style>
+		:root {
+			--md-primary: #6750A4;
+			--md-on-primary: #FFFFFF;
+			--md-primary-container: #EADDFF;
+			--md-on-primary-container: #21005D;
+			--md-surface: #FEF7FF;
+			--md-on-surface: #1C1B1F;
+			--md-surface-variant: #E7E0EC;
+			--md-on-surface-variant: #49454F;
+			--md-outline: #79747E;
+		}
+
+		body.dark-theme {
+			--md-primary: #D0BCFF;
+			--md-on-primary: #381E72;
+			--md-primary-container: #4F378B;
+			--md-on-primary-container: #EADDFF;
+			--md-surface: #141218;
+			--md-on-surface: #E6E1E5;
+			--md-surface-variant: #49454F;
+			--md-on-surface-variant: #CAC4D0;
+			--md-outline: #938F99;
+		}
+
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		body {
+			font-family: 'Roboto', 'Noto Sans SC', sans-serif;
+			background-color: var(--md-surface);
+			color: var(--md-on-surface);
+			line-height: 1.6;
+			transition: background-color 0.3s, color 0.3s;
+		}
+
+		/* 顶部应用栏 */
+		.top-app-bar {
+			display: flex;
+			align-items: center;
+			padding: 16px 24px;
+			background-color: var(--md-primary);
+			color: var(--md-on-primary);
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		}
+
+		.app-bar-title {
+			font-size: 22px;
+			font-weight: 500;
+			margin-left: 16px;
+		}
+
+		/* 主要内容区域 */
+		.main-content {
+			padding: 24px;
+			max-width: 1200px;
+			margin: 0 auto;
+		}
+
+		/* 显示区域 */
+		.hero-section {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			padding: 40px 24px;
+			background-color: var(--md-primary-container);
+			color: var(--md-on-primary-container);
+			border-radius: 16px;
+			margin-bottom: 32px;
+		}
+
+		.avatar {
+			width: 120px;
+			height: 120px;
+			border-radius: 60px;
+			background-color: var(--md-primary);
+			color: var(--md-on-primary);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-bottom: 20px;
+			cursor: pointer;
+			transition: transform 0.2s;
+			overflow: hidden;
+		}
+
+		.avatar img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+
+		.avatar:active {
+			transform: scale(0.95);
+		}
+
+		.hero-title {
+			font-size: 28px;
+			font-weight: 500;
+			margin-bottom: 12px;
+		}
+
+		.hero-description {
+			font-size: 16px;
+			max-width: 600px;
+			opacity: 0.9;
+		}
+
+		/* 卡片组件 */
+		.card {
+			background-color: var(--md-surface-variant);
+			border-radius: 12px;
+			padding: 24px;
+			margin-bottom: 24px;
+			box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+		}
+
+		.card-title {
+			font-size: 22px;
+			font-weight: 500;
+			margin-bottom: 16px;
+			color: var(--md-on-surface-variant);
+		}
+
+		/* 网格布局 */
+		.grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+			gap: 20px;
+			margin-top: 20px;
+		}
+
+		/* 列表项 - 增大上移动画距离 */
+		.list-item {
+			display: flex;
+			align-items: center;
+			padding: 16px;
+			border-radius: 12px;
+			background-color: var(--md-surface);
+			color: var(--md-on-surface);
+			cursor: pointer;
+			transition: all 0.2s ease;
+			text-decoration: none;
+			margin-bottom: 8px;
+			border: 1px solid transparent;
+			position: relative;
+		}
+
+		.list-item:hover {
+			background-color: rgba(0, 0, 0, 0.04);
+		}
+
+		.list-item:active {
+			background-color: rgba(0, 0, 0, 0.08);
+			transform: translateY(-5px);
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+		}
+
+		.list-icon {
+			margin-right: 16px;
+			color: var(--md-primary);
+			font-size: 24px;
+		}
+
+		.list-content {
+			flex: 1;
+		}
+
+		.list-title {
+			font-weight: 500;
+			margin-bottom: 4px;
+		}
+
+		.list-subtitle {
+			font-size: 14px;
+			color: var(--md-on-surface-variant);
+			line-height: 1.4;
+		}
+
+		/* 底部区域 */
+		.footer {
+			text-align: center;
+			padding: 24px;
+			color: var(--md-on-surface-variant);
+			font-size: 14px;
+			border-top: 1px solid var(--md-outline);
+			margin-top: 40px;
+		}
+
+		/* 主题切换按钮 */
+		.theme-toggle {
+			position: fixed;
+			bottom: 24px;
+			right: 24px;
+			width: 56px;
+			height: 56px;
+			border-radius: 28px;
+			background-color: var(--md-primary);
+			color: var(--md-on-primary);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+			cursor: pointer;
+			z-index: 100;
+			transition: transform 0.2s;
+		}
+
+		.theme-toggle:hover {
+			transform: scale(1.1);
+		}
+
+		.theme-toggle:active {
+			transform: scale(0.95);
+		}
+
+		/* 彩蛋弹窗样式 */
+		.easter-egg-modal {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			z-index: 1000;
+			opacity: 0;
+			visibility: hidden;
+			transition: opacity 0.3s, visibility 0.3s;
+		}
+
+		.easter-egg-modal.show {
+			opacity: 1;
+			visibility: visible;
+		}
+
+		.easter-egg-content {
+			background-color: var(--md-surface);
+			color: var(--md-on-surface);
+			padding: 30px;
+			border-radius: 16px;
+			text-align: center;
+			max-width: 80%;
+			box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+		}
+
+		.easter-egg-content h2 {
+			font-size: 24px;
+			margin-bottom: 16px;
+			color: var(--md-primary);
+		}
+
+		.easter-egg-content p {
+			margin-bottom: 24px;
+		}
+
+		.easter-egg-close {
+			background-color: var(--md-primary);
+			color: var(--md-on-primary);
+			border: none;
+			padding: 10px 20px;
+			border-radius: 8px;
+			cursor: pointer;
+			font-weight: 500;
+			transition: background-color 0.2s;
+		}
+
+		.easter-egg-close:hover {
+			background-color: var(--md-primary-container);
+			color: var(--md-on-primary-container);
+		}
+
+		/* 响应式调整 */
+		@media (max-width: 768px) {
+			.grid {
+				grid-template-columns: 1fr;
+			}
+			
+			.main-content {
+				padding: 16px;
+			}
+			
+			.hero-section {
+				padding: 32px 16px;
+			}
+			
+			.avatar {
+				width: 100px;
+				height: 100px;
+			}
+		}
+	</style>
 </head>
 <body>
-    <h1>欢迎！这是我的个人网站。</h1>
-    <p>我正在使用 GitHub Pages 学习如何创建网站。</p>
+	<!-- 顶部应用栏 -->
+	<div class="top-app-bar">
+		<span class="material-icons" style="color: var(--md-on-primary);">person</span>
+		<h1 class="app-bar-title">director_Carter主页</h1>
+	</div>
+
+	<!-- 主要内容区域 -->
+	<div class="main-content">
+		<!-- 显示区域 -->
+		<div class="hero-section">
+			<div class="avatar" id="avatar">
+				<img src="https://director4168.github.io/TouXiang.png" alt="头像">
+			</div>
+			<h1 class="hero-title">director_Carter的主页</h1>
+			<p class="hero-description">director_Carter的主页🥰🥰，部署在Github<p>
+			<p class="hero-description">该网站也用于存储我的一些程序的更新配置数据</p>
+			<p style="margin-top: 12px; font-size: 14px; color: var(--md-on-surface-variant);">
+				<span class="material-icons" style="font-size: 14px; vertical-align: middle;">info</span>
+			若遇到访问速度过慢、被Github拒绝请求，可尝试使用科学上网（又称梯子）。
+			</p>
+			<p style="margin-top: 12px; font-size: 14px; color: var(--md-on-surface-variant);">
+				<span class="material-icons" style="font-size: 14px; vertical-align: middle;">info</span>
+			头像数据、网页源数据、配置数据均存放于Github中。
+			</p>
+		</div>
+
+		<!-- 社交账号卡片 -->
+		<div class="card">
+			<h2 class="card-title">我的社交账号（点击标签可跳转）</h2>
+			<div class="grid">
+				<a class="list-item" href="https://b23.tv/tIm8pA4" target="_blank">
+					<span class="material-icons list-icon">play_circle</span>
+					<div class="list-content">
+						<div class="list-title">哔哩哔哩(中国大陆版)</div>
+						<div class="list-subtitle">欢迎关注我的哔哔哩哔🥰🥰（求点赞投币关注🙃🙃🥰🥰）。</div>
+						<div class="list-subtitle">哔哩哔哩📺昵称: director_Carter</div>
+					</div>
+					<span class="material-icons" style="color: var(--md-outline);">open_in_new</span>
+				</a>
+
+				<a class="list-item" href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=2705722903&card_type=person&source=qrcode" target="_blank">
+					<span class="material-icons list-icon">chat</span>
+					<div class="list-content">
+						<div class="list-title">QQ</div>
+						<div class="list-subtitle">我的QQ，但是可能会显示风险账号，因为之前模块掉了导致root被检测出来了😭😭😭😭😭😭</div>
+						<div class="list-subtitle">QQ号🐧: 2705722903</div>
+					</div>
+					<span class="material-icons" style="color: var(--md-outline);">open_in_new</span>
+				</a>
+
+				<a class="list-item" href="https://bbs.binmt.cc/home.php?mod=space&uid=134138&do=profile&mobile=2" target="_blank">
+					<span class="material-icons list-icon">forum</span>
+					<div class="list-content">
+						<div class="list-title">MT论坛</div>
+						<div class="list-subtitle">我的MT论坛账号，欢迎来看我的帖子🥰🥰。</div>
+						<div class="list-subtitle">MT论坛📖昵称: director_mark</div>
+					</div>
+					<span class="material-icons" style="color: var(--md-outline);">open_in_new</span>
+				</a>
+
+				<a class="list-item" href="https://github.com/director4168" target="_blank">
+					<span class="material-icons list-icon">code</span>
+					<div class="list-content">
+						<div class="list-title">GitHub</div>
+						<div class="list-subtitle">我的Github帐号，不过实际上我的大部分代码都是直接开源在压缩包里的（开源协议通常使用GPL-3），在Github基本上没有发（首先绝对不是因为懒😏😏🙃🙃）。</div>
+						<div class="list-subtitle">Github🖥🐈昵称: director4168</div>
+					</div>
+					<span class="material-icons" style="color: var(--md-outline);">open_in_new</span>
+				</a>
+
+				<a class="list-item" href="mailto:2705722903@qq.com">
+					<span class="material-icons list-icon">email</span>
+					<div class="list-content">
+						<div class="list-title">QQ邮箱</div>
+						<div class="list-subtitle">欢迎通过电子邮件向我提出建议、反馈bug等🙃🙃。</div>
+						<div class="list-subtitle">邮箱📮: 2705722903@qq.com</div>
+					</div>
+					<span class="material-icons" style="color: var(--md-outline);">open_in_new</span>
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<!-- 底部区域 -->
+	<div class="footer">
+		<p>© <span id="current-year">2025</span> director_Carter | 主页</p>
+	</div>
+
+	<!-- 主题切换按钮 -->
+	<div class="theme-toggle" id="themeToggle">
+		<span class="material-icons">dark_mode</span>
+	</div>
+
+	<!-- 彩蛋弹窗 -->
+	<div class="easter-egg-modal" id="easterEggModal">
+		<div class="easter-egg-content">
+			<h2>🎆 彩蛋 🎆</h2>
+			<p>恭喜你发现了这个隐藏彩蛋！</p>
+			<p>所以你居然戳我，而且是快速的戳我，估计是不小心点了一下之后发现点击有反应吧</p>
+			<button class="easter-egg-close" id="easterEggClose">关闭</button>
+		</div>
+	</div>
+
+	<script>
+		// 主题切换功能
+		document.addEventListener('DOMContentLoaded', function() {
+			const themeToggle = document.getElementById('themeToggle');
+			const themeIcon = themeToggle.querySelector('.material-icons');
+			
+			// 检测系统主题偏好
+			const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)');
+			
+			// 根据系统主题设置初始样式
+			if (prefersDarkScheme.matches) {
+				document.body.classList.add('dark-theme');
+				themeIcon.textContent = 'light_mode';
+			} else {
+				document.body.classList.remove('dark-theme');
+				themeIcon.textContent = 'dark_mode';
+			}
+			
+			// 监听系统主题变化
+			prefersDarkScheme.addEventListener('change', e => {
+				if (e.matches) {
+					document.body.classList.add('dark-theme');
+					themeIcon.textContent = 'light_mode';
+				} else {
+					document.body.classList.remove('dark-theme');
+					themeIcon.textContent = 'dark_mode';
+				}
+			});
+			
+			// 手动切换主题
+			themeToggle.addEventListener('click', function() {
+				if (document.body.classList.contains('dark-theme')) {
+					document.body.classList.remove('dark-theme');
+					themeIcon.textContent = 'dark_mode';
+				} else {
+					document.body.classList.add('dark-theme');
+					themeIcon.textContent = 'light_mode';
+				}
+			});
+
+			// 更新页脚年份
+			const currentYear = new Date().getFullYear();
+			const yearElement = document.getElementById('current-year');
+			if (currentYear > 2025) {
+				yearElement.textContent = `2025-${currentYear}`;
+			} else {
+				yearElement.textContent = '2025';
+			}
+
+			// 彩蛋功能
+			const avatar = document.getElementById('avatar');
+			const easterEggModal = document.getElementById('easterEggModal');
+			const easterEggClose = document.getElementById('easterEggClose');
+			let clickCount = 0;
+			let lastClickTime = 0;
+
+			avatar.addEventListener('click', function() {
+				const now = new Date().getTime();
+				if (now - lastClickTime > 500) { // 防止快速连续点击
+					clickCount = 0;
+				}
+				clickCount++;
+				lastClickTime = now;
+
+				if (clickCount >= 10) {
+					easterEggModal.classList.add('show');
+					clickCount = 0;
+				}
+			});
+
+			easterEggClose.addEventListener('click', function() {
+				easterEggModal.classList.remove('show');
+			});
+		});
+	</script>
 </body>
 </html>
