--- a/index.html
+++ b/index.html
@@ -206,11 +206,14 @@
         }
         
         /* 调试用途：显示浏览器原生控制条 */
-        #real-audio-player {
-            width: 100%;
-            margin-top: 20px;
-            /* 使原生控件更搭配主题，可以删除这行以获得默认样式 */
-            filter: invert(1) hue-rotate(90deg); 
+#real-audio-player
+ {
+            display
+: none; 
+            width: 100%
+;
+            margin-top: 20px
+;
         }
     </style>
 </head>
